#pragma once

#include <cmath>

class Function
{
private:
    /* data */
public:
    Function(/* args */) {}
    ~Function() {}

    static double evaluar(double x);
};
